--- a/frontend/search.html
+++ b/frontend/search.html
@@ -110,7 +110,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:3001';
+        const API_BASE = 'http://192.168.1.100';
         let content = [], searchResults = [], filters = {}, activeFilters = {};
 
         document.addEventListener('DOMContentLoaded', function() {
