--- a/frontend/add.html
+++ b/frontend/add.html
@@ -99,7 +99,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:3001';
+        const API_BASE = 'http://192.168.1.100';
         let sources = [];
 
         document.addEventListener('DOMContentLoaded', function() {
