--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,7 +70,7 @@
     </div>
 
     <script>
-        const API_BASE = 'http://localhost:3001';
+        const API_BASE = 'http://192.168.1.100';
         document.addEventListener('DOMContentLoaded', loadStats);
 
         async function loadStats() {
